BUG#33414 : Backup: DDL hangs indefinitely if ongoing backup

Added ability to set a timeout for blocked DDL operations. The
timeout is the number of seconds a blocked DDL operation will 
wait before aborting with an error message. The variable can be
set only as a session variable.

Note: timeout must be set before DDL is executed.